--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- src/main/AndroidManifest.xml -->
+    <!-- Internet permission for network requests -->
     <uses-permission android:name="android.permission.INTERNET" />
-
 
     <application
         android:allowBackup="true"
@@ -16,8 +15,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalAssigment"
         tools:targetApi="31">
+
+        <!-- Detail screen for science topics -->
         <activity android:name=".ScienceDetailActivity" />
+
+        <!-- Main activity (home screen) -->
         <activity android:name=".MainActivity" />
+
+        <!-- Login activity (first screen launched when the app starts) -->
         <activity android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
